src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__operation_directives__input_field_type_mismatch.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 2,
            column: 49,
            file: 0,
            builtin: false,
        },
        message: TypeMismatch {
            type: "Int",
        },
        additional_info: [],
    },
]
