src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__operation_directives__no_argument.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 1,
            column: 20,
            file: 0,
            builtin: false,
        },
        message: RequiredArgumentNotSpecified {
            name: "bool",
        },
        additional_info: [
            (
                Pos {
                    line: 1,
                    column: 40,
                    file: 0,
                    builtin: false,
                },
                DefinitionPos {
                    name: "bool",
                },
            ),
        ],
    },
]
