src/checker/operation_checker/tests/snapshots/nitrogql__checker__operation_checker__tests__operation_directives__unknown_argument.snap
---
source: src/checker/operation_checker/tests/mod.rs
expression: "check_operation_document(&schema, &doc)"
---
[
    CheckError {
        position: Pos {
            line: 1,
            column: 49,
            file: 0,
            builtin: false,
        },
        message: UnknownArgument {
            name: "another",
        },
        additional_info: [],
    },
]
